text align looks ugly in small window, fixed it

--- a/src/pages/parallax.module.css
+++ b/src/pages/parallax.module.css
@@ -93,7 +93,7 @@
 }
 
 .textbox {
-  text-align: justify;
+  text-align: center;
   background-color:rgba(255,255,255,1.00);
   padding: 50px 80px 30px;
 }
@@ -145,5 +145,12 @@
     -o-background-size: cover;
     -moz-background-size: cover;
     -webkit-background-size: cover;
+  }
+}
+
+@media only screen and (max-device-width: 1024px) {
+  .textbox {
+    padding-left: 40px;
+    padding-right: 40px;
   }
 }
